--- a/open-webui/package.json
+++ b/open-webui/package.json
@@ -84,6 +84,8 @@
 		"dompurify": "^3.2.5",
 		"eventsource-parser": "^1.1.2",
 		"file-saver": "^2.0.5",
+		"firebase": "^11.9.1",
+		"firebase-admin": "^13.4.0",
 		"focus-trap": "^7.6.4",
 		"fuse.js": "^7.0.0",
 		"highlight.js": "^11.9.0",
