--- a/open-webui/Dockerfile.frontend
+++ b/open-webui/Dockerfile.frontend
@@ -12,7 +12,7 @@ COPY . .
 
 # Install dependencies and build the frontend
 RUN npm install
-RUN npm run build
+# RUN npm run build
 
 # Expose the port the app runs on
 EXPOSE 5173
