--- a/litellm/docker-compose.yml
+++ b/litellm/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.11"
 services:
   litellm:
     build:
@@ -28,6 +27,8 @@ services:
       timeout: 10s   # Health check command times out after 10 seconds
       retries: 3     # Retry up to 3 times if health check fails
       start_period: 40s  # Wait 40 seconds after container start before beginning health checks
+    networks:
+      - litellm_network
 
   db:
     image: postgres:16
@@ -46,6 +47,8 @@ services:
       interval: 1s
       timeout: 5s
       retries: 10
+    networks:
+      - litellm_network
 
   prometheus:
     image: prom/prometheus
@@ -59,6 +62,12 @@ services:
       - "--storage.tsdb.path=/prometheus"
       - "--storage.tsdb.retention.time=15d"
     restart: always
+    networks:
+      - litellm_network
+
+networks:
+  litellm_network:
+    name: litellm_network
 
 volumes:
   prometheus_data:
