--- a/open-webui/backend/Dockerfile
+++ b/open-webui/backend/Dockerfile
@@ -3,12 +3,15 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Copy all backend files into the container
-COPY . /app/
+# Copy application files
+COPY ./backend/. .
 
-# Install Python dependencies
+# Copy package.json to the root of the container filesystem
+COPY ./package.json /package.json
+
+# Install dependencies
 # Make sure you have a requirements.txt file in this directory
-RUN pip install --no-cache-dir && pip install -r requirements.txt
+RUN pip install --no-cache-dir --upgrade pip && pip install -r requirements.txt
 
 # --- FIX ---
 # Make the dev.sh script executable
