--- a/open-webui/backend/requirements.txt
+++ b/open-webui/backend/requirements.txt
@@ -140,3 +140,6 @@ opentelemetry-instrumentation-requests==0.53b1
 opentelemetry-instrumentation-logging==0.53b1
 opentelemetry-instrumentation-httpx==0.53b1
 opentelemetry-instrumentation-aiohttp-client==0.53b1
+firebase-admin
+stripe
+streamlit
