--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -26,4 +26,8 @@ services:
       - STRIPE_WEBHOOK_SECRET=whsec_e33ed9d908019d2b044b89c8fe14725e2a26c29fb9785b8138802333e3f840bc
     volumes:
       - webui_data:/app/data
-    restart: unless-stopped 
+    restart: unless-stopped
+
+volumes:
+  webui_data:
+    driver: local 
