--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,10 +11,10 @@ services:
     environment:
       # For beta/production testing, use the public tunnel URL to reach the LiteLLM service.
       # Replace the URL below with the one from your ngrok terminal.
-      - LITELLM_API_URL=https://YOUR_UNIQUE_NGROK_URL.ngrok-free.app
+      - LITELLM_API_URL=http://localhost:4000
       - LITELLM_MASTER_KEY=sk-1234
       # This tells the backend where the frontend is running, so it can create correct redirect URLs for Stripe.
-      - WEBUI_URL=http://localhost:5173
+      - WEBUI_URL=http://localhost:8080
       - BASE_URL=http://localhost:8080
       - STRIPE_PRICE_ID=price_1RnVuMRoIzbn9VW9UJ5PimsV
       - STRIPE_SECRET_KEY=sk_test_51RnVkeRoIzbn9VW93cGgiTl3K3XuncMdCP2D3WkEEKc2qLGiAe4V2gBHKRSAOdTKgzBBZY3CTqFOwNDHqzUgmP7900Yv2TTFvH
